--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
   width: 700px;
   margin: 30px auto;
   display: flex;
+  flex-wrap: wrap;
+  position: relative;
 }
 
 input {
@@ -21,6 +23,7 @@ input {
   background-color: rgba(134, 134, 134, 0.205);
   border: none;
   border-radius: 2px;
+  margin-left: 2%;
 }
 
 input:focus {
@@ -28,14 +31,19 @@ input:focus {
 }
 
 .btn {
-  width: 20%;
+  width: 15%;
+  height: 100%;
+  font-size: 15px;
   border: none;
   border-radius: 2px;
   background-color: rgb(229, 9, 20);
   color: white;
-  font-size: 16px;
   font-weight: bold;
   cursor: pointer;
+  position: absolute;
+  margin-right: 2%;
+  right: 0;
+  top: 0;
 }
 
 .btn:hover {
@@ -50,8 +58,12 @@ input:focus {
   color: rgba(255, 255, 255, 0.884);
 }
 
+.movie-box p {
+  margin-left: 2%;
+}
 .movie-box img {
   width: 50%;
+  margin-right: 2%;
 }
 
 .mg0 {
